--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -110,9 +110,9 @@ Ensure you review the {uri-terraform-dependencies}[dependencies].
 |Default
 
 |label_prefix
-|a string to be prepended to the name of resources.
+|a string to be prepended to the name of resources. *Required*
 |
-|oke
+|
 
 |region
 |Region where to provision the OKE cluster. {uri-oci-region}[List of regions]. *Required*
@@ -193,14 +193,14 @@ newbits = {
 |10.0.0.0/16
 
 |vcn_dns_label
-|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name.
+|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name. *Required*
 |
-|oke
+|
 
 |vcn_name
-|The name of the VCN that will be appended to the label_prefix.
+|The name of the VCN that will be appended to the label_prefix. *Required*
 |
-|oke vcn
+|
 
 |===
 
@@ -254,14 +254,14 @@ newbits = {
 |true
 
 |bastion_shape
-|The shape of bastion instance.
+|The shape of bastion instance. *Required*
 |
-|VM.Standard.E2.1
+|
 
 |bastion_timezone
-|The preferred timezone for the bastion host. {uri-timezones}[List of timezones]
+|The preferred timezone for the bastion host. {uri-timezones}[List of timezones]. *Required*
 |
-|Australia/Sydney
+|
 
 |===
 
@@ -315,14 +315,14 @@ newbits = {
 |true
 
 |admin_shape
-|The shape of admin instance.
+|The shape of admin instance. *Required*
 |
-|VM.Standard.E2.1
+|
 
 |admin_timezone
-|The preferred timezone for the admin host. {uri-timezones}[List of timezones]
+|The preferred timezone for the admin host. {uri-timezones}[List of timezones]. *Required*
+|e.g. Australia/Sydney
 |
-|Australia/Sydney
 
 |===
 
@@ -375,9 +375,9 @@ availability_domains = {
 |false
 
 |cluster_name
-|The name of the OKE cluster. This will be appended to the label_prefix.
+|The name of the OKE cluster. This will be appended to the label_prefix. *Required*
 |
-|oke
+|
 
 |dashboard_enabled
 |Whether to create the default Kubernetes dashboard.
@@ -393,16 +393,15 @@ availability_domains = {
 |The number, shape and quantities per subnets of node pools to create. Each key and tuple pair corresponds to 1 node pool. The first parameter in the tuple sets the shape of the worker node and the 2nd parameter sets the size of the node pool. A minimum of 3 worker worker nodes per node pool will be created.  Refer to {uri-topology}[topology] for more thorough examples.
 |e.g.
 [source]
-----
 node_pools = {
   "np1" = ["VM.Standard2.1", 1]
 }
-----
-|----
+ 
+|
+[source]
 node_pools = {
   "np1" = ["VM.Standard2.1", 1]
 }
-----
 
 |node_pool_name_prefix
 |A string prefixed to the node pool name.
@@ -487,17 +486,17 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |false
 
 |email_address
-|The email address to be used when creating the Docker secret. *Required* if create_auth_token is set to true.
+|The email address to be used when creating the Docker secret. *Required* if _create_auth_token_ is set to *true*.
 |
 |None
 
 |tenancy_name
-|The *_name_* of the tenancy to be used when creating the Docker secret.  This is different from tenancy_id. *Required* if create_auth_token is set to true.
+|The *_name_* of the tenancy to be used when creating the Docker secret.  This is different from tenancy_id. *Required* if _create_auth_token_ is set to *true*.
 |
 |None
 
 |username
-|The username that can login to the selected tenancy. This is different from tenancy_id. *Required* if create_auth_token is set to true.
+|The username that can login to the selected tenancy. This is different from tenancy_id. *Required* if _create_auth_token_ is set to *true*.
 |
 |None
 
@@ -574,7 +573,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |false
 
 |existing_key_id
-|id of existing KMS key
+|id of existing KMS key. *Required* if _use_encryption_ is set to *true*
 |
 |
 |===
