--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -16,6 +16,8 @@
 :uri-terraform: https://www.terraform.io
 :uri-terraform-oci: https://www.terraform.io/docs/providers/oci/index.html
 :uri-terraform-options: {uri-docs}/terraformoptions.adoc
+:uri-topology: {uri-docs}/topology.adoc
+:uri-variables: {uri-rel-file-base}/variables.tf
 
 . link:#assumptions[Assumptions]
 . link:#pre-requisites[Pre-requisites]
@@ -32,12 +34,13 @@
 
 1. git is installed
 2. ssh client is installed
-3. Terraform 0.12.4+ is installed
+3. Terraform 0.12.16+ is installed
 
-=== Instructions for provisioning
+=== Provisioning using this git repo
 
-1. Clone the repo:
+. Clone the repo:
 
++
 [source,bash]
 ----
 git clone https://github.com/oracle-terraform-modules/terraform-oci-oke.git tfoke
@@ -46,30 +49,9 @@ cd tfoke
 cp terraform.tfvars.example terraform.tfvars
 ----
 
-2. Set mandatory parameters:
+. Create a provider.tf file and add the following:
 
-* api_fingerprint
-* api_private_key_path
-* compartment_id
-* compartment_name
-* tenancy_id
-* user_id
-
-3. Override other parameters:
-
-* region
-
-4. Optional parameters to override:
-* ssh_private_key_path
-* ssh_public_key_path
-* vcn_dns_label
-* vcn_name
-* bastion_enabled
-* cluster_name
-* worker_mode
-
-5. Create a provider.tf file and add the following:
-
++
 ----
 provider "oci" {
   tenancy_ocid         = var.tenancy_id
@@ -81,61 +63,108 @@ provider "oci" {
 }
 ----
 
-=== Instructions for using as module
-1. See basic example below:
-```hcl
-variable "tenancy_id" {}
-variable "user_id" {}
-variable "api_fingerprint" {}
-variable "api_private_key_path" {}
-variable "region" {}
-variable "disable_auto_retries" {}
-variable "username" {}
-variable "bastion_notification_endpoint" {}
-variable "ssh_public_key_path" {}
-variable "service_account_cluster_role_binding" {}
-variable "compartment_id" {}
-variable "cluster_name" {}
-variable "bastion_timezone" {}
-variable "email_address" {}
-variable "existing_key_id" {}
-variable "tenancy_name" {}
-variable "vcn_name" {}
-variable "node_pools" {}
-variable "admin_notification_endpoint" {}
-variable "vcn_dns_label" {}
-variable "bastion_shape" {}
-variable "ssh_private_key_path" {}
-variable "label_prefix" {}
-variable "admin_timezone" {}
-module "terraform-oci-oke" {
-  source                                = "../terraform-oci-oke"
-  tenancy_name                          =   var.tenancy_name
-  tenancy_id                            =   var.tenancy_id
-  compartment_id                        =   var.compartment_id
-  user_id                               =   var.user_id
-  api_fingerprint                       =   var.api_fingerprint
-  api_private_key_path                  =   var.api_private_key_path
-  region                                =   var.region
-  disable_auto_retries                  =   var.disable_auto_retries
-  node_pools                            =   var.node_pools
-  username                              =   var.username
-  ssh_public_key_path                   =   var.ssh_public_key_path
-  ssh_private_key_path                  =   var.ssh_private_key_path
-  service_account_cluster_role_binding  =   var.service_account_cluster_role_binding
-  cluster_name                          =   var.cluster_name
-  email_address                         =   var.email_address
-  existing_key_id                       =   var.existing_key_id
-  vcn_name                              =   var.vcn_name
-  admin_notification_endpoint           =   var.admin_notification_endpoint
-  vcn_dns_label                         =   var.vcn_dns_label
-  bastion_shape                         =   var.bastion_shape
-  admin_timezone                        =   var.admin_timezone
-  bastion_notification_endpoint         =   var.bastion_notification_endpoint
-  bastion_timezone                      =   var.bastion_timezone
-  label_prefix                          =   var.label_prefix
+. Set mandatory parameters:
+
+* api_fingerprint
+* api_private_key_path
+* compartment_id
+* compartment_name
+* tenancy_id
+* user_id
+
+. Override other parameters:
+
+* region
+
+. Optional parameters to override:
+* bastion_enabled
+* cluster_name
+* ssh_private_key_path (Required if bastion is enabled)
+* ssh_public_key_path (Required if bastion is enabled)
+* vcn_dns_label
+* vcn_name
+* worker_mode
+
+. Run Terraform:
+
++
+[source,bash]
+----
+terraform init
+terraform plan
+terraform apply
+----
+
+=== Provisioning using the Hashicorp registry module
+
+. In your project root, create a provider.tf file and add the following:
+
++
+----
+provider "oci" {
+  tenancy_ocid         = var.tenancy_id
+  user_ocid            = var.user_id
+  fingerprint          = var.api_fingerprint
+  private_key_path     = var.api_private_key_path
+  region               = var.region
+  disable_auto_retries = var.disable_auto_retries
 }
-```
+----
+
+. In your project root, create a variables.tf file and add variables for your project. You can copy the existing {uri-variables}[variables.tf] in the oke module root.
+
+. In your project root, create a main.tf file and add the following:
+
++
+----
+module "oke" {
+  source  = "oracle-terraform-modules/oke/oci"
+  version = "2.1.3"
+  # insert the 23 required variables here
+}
+----
+
+. Edit your oke module definition and pass the required variables:
+
++
+----
+module "oke" {
+  source                                =   "oracle-terraform-modules/oke/oci"
+  version                               =   "2.1.3"
+
+  compartment_id                        =   var.compartment_id
+  tenancy_id                            =   var.tenancy_id
+  user_id                               =   var.user_id
+
+  ssh_private_key_path                  =   var.ssh_private_key_path
+  ssh_public_key_path                   =   var.ssh_public_key_path
+
+  label_prefix                          =   var.label_prefix
+  region                                =   var.region
+
+  vcn_dns_label                         =   var.vcn_dns_label
+  vcn_name                              =   var.vcn_name
+
+  bastion_shape                         =   var.bastion_shape
+  bastion_timezone                      =   var.bastion_timezone
+
+  admin_shape                           =   var.admin_shape
+  admin_timezone                        =   var.admin_timezone
+
+  # add additional parameters for availability_domains, oke etc as you need
+
+}
+----
+
+. Run Terraform:
+
++
+[source,bash]
+----
+terraform init
+terraform plan
+terraform apply
+----
 
 === Related documentation:
 
