--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,15 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+== 2.1.4 (March 31, 2020)
+* removed provider.tf so module can be used from hashicorp registry, added instructions for using this repo and hashicorp module (#130)
+* fixed incorrect part about bastion host and tools in topology (#141)
+* upgraded default helm version on admin host to 3.1.1 (#134)
+
+== 2.1.3 (March 6, 2020)
+* fixed broken links in README.md (#132)
+* updated documentation in topology to use netnum instead of previous variable name
+
 == 2.1.2 (February 19, 2020)
 * base module now points to the published base module on hashicorp registry
 * updated descriptions in variables, outputs and formatting to publish to hashicorp registry
