--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,11 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+== 2.1.6 (April 13, 2020)
+* Fixed issue with admin host ordering of oci-cli installation, instance_principal creation and kubeconfig generation (#143)
+* Upgraded base module to 1.1.3 to be able to detect when admin instance_principal is ready
+* Removed unnecessary token variable version and expiration
+
 == 2.1.5 (April 06, 2020)
 * Added ig_route_id, nat_route_id, subnet_ids, vcn_id for reuse (#145)
 
