--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -511,8 +511,8 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |Default
 
 |secret_id
-|The Auth Token is stored in Oracle Vault Secret and then subsequently used to create a Kubernetes secret, which can then be used as an imagePullSecrets in a deployment.
-|Secret ocid
+|The id of the Secret in Vault where the Auth Token is stored.
+|
 |null
 
 
