--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,10 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+== 2.2.0 (May 4, 2020)
+* Use OCI Secret in Vault to retrieve Auth Token for creating Kubernetes secret for OCIR. This allows reuse of existing Auth Tokens (#153)
+* Added Montreal as supported region (#160)
+
 == 2.1.6 (April 13, 2020)
 * Fixed issue with admin host ordering of oci-cli installation, instance_principal creation and kubeconfig generation (#143)
 * Upgraded base module to 1.1.3 to be able to detect when admin instance_principal is ready
